--- a/select-with-image/package.json
+++ b/select-with-image/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "css-loader": "^3.2.0",
+    "file-loader": "^6.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
