--- a/burger-menu/package.json
+++ b/burger-menu/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "css-loader": "^3.2.0",
     "file-loader": "^6.0.0",
     "html-loader": "^0.5.5",
