--- a/buttons/package.json
+++ b/buttons/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "css-loader": "^3.5.2",
     "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
